Revert "rollback exxagerated safety measure"
This reverts commit 11db9f2f7f16a4213ab0c96ea95fef70b722fe69.
